assignment 4 auth api work
